fix tailwind scrollbar-none

--- a/src/components/containers/artists/ArtistArtworkDetailContainer/artistArtworkDetailContainer.module.css
+++ b/src/components/containers/artists/ArtistArtworkDetailContainer/artistArtworkDetailContainer.module.css
@@ -1,11 +1,11 @@
 .leftPane {
-  @apply no-scrollbar
-  relative
+  @apply relative
   !flex
   h-fit
   flex-col
   overflow-y-scroll
   pt-10
+  scrollbar-none
   md:sticky
   md:top-[60px]
   md:h-[calc(100vh-60px)];
